syntax = "proto3";

package order;

option go_package = "order-service/proto/order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message CreateOrderRequest {
  int32 user_id = 1;
  repeated string items = 2;
  string status = 3;
  double total = 4;
}

message CreateOrderResponse {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated string items = 3;
  string status = 4;
  double total = 5;
}

message GetOrderRequest {
  int32 order_id = 1;
}

message GetOrderResponse {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated string items = 3;
  string status = 4;
  double total = 5;
}

message UpdateOrderRequest {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated string items = 3;
  string status = 4;
  double total = 5;
}

message UpdateOrderResponse {
  int32 order_id = 1;
  int32 user_id = 2;
  repeated string items = 3;
  string status = 4;
  double total = 5;
}

message DeleteOrderRequest {
  int32 order_id = 1;
}

message DeleteOrderResponse {
  string status = 1;
}